feat: Upgrade Spring Boot to 3.5.14. Upgrade related dependencies too (#39)
* fix: SPELL_CODESPELL linter errors are fixed.

* fix: JAVA linter errors are fixed. Code is slightly cleansed.

* feat: Spring Boot 3.5.11 and related changes are made: Bump dependencies versions: jackson to 2.18.6, logback to 1.5.32, springdoc-openapi-starter-webmvc-ui to 2.8.16. Test dependencies management is improved.

* fix(deps): Unify dependencies: Bump Spring Boot to 3.5.14, Spring Cloud to 2025.0.2, tomcat-embed to 10.1.54, bouncycastle to 1.84, httpclient5/httpcore5 to 5.4.4/5.3.4, mockito to 5.23.0, tika-core to 3.2.2, maven-surefire-plugin to 3.5.5. Bump atp-auth to 2.0.0. Project version is changed to 2.0.0-SNAPSHOT.

---------

Co-authored-by: dmch1019 <dmitrii.churbanov@netcracker.com>