@@ -1,5 +1,5 @@
 /*
- * # Copyright 2024-2025 NetCracker Technology Corporation
+ * # Copyright 2024-2026 NetCracker Technology Corporation
  * #
  * # Licensed under the Apache License, Version 2.0 (the "License");
  * # you may not use this file except in compliance with the License.
@@ -21,8 +21,6 @@ import java.util.HashMap;
 import java.util.List;
 import java.util.Map;
 
-import javax.annotation.Nonnull;
-import javax.annotation.Nullable;
 import javax.script.Bindings;
 import javax.script.Compilable;
 import javax.script.CompiledScript;
@@ -39,6 +37,8 @@ import org.qubership.atp.macros.core.model.Macros;
 import org.qubership.atp.macros.core.model.MacrosParameter;
 import org.qubership.atp.macros.core.processor.AbstractContext;
 
+import jakarta.annotation.Nonnull;
+import jakarta.annotation.Nullable;
 import lombok.RequiredArgsConstructor;
 import lombok.extern.slf4j.Slf4j;
 
@@ -50,7 +50,8 @@ public class ScriptMacrosCalculator implements MacrosCalculator {
 
     @Nullable
     @Override
-    public String calculate(@Nonnull Macros macros, @Nullable List<String> arguments,
+    public String calculate(@Nonnull Macros macros,
+                            @Nullable List<String> arguments,
                             @Nonnull AbstractContext context) {
         ScriptEngine engine = scriptEngineManager.getEngineByName(macros.getEngine());
         if (engine instanceof Invocable) {
@@ -68,7 +69,7 @@ public class ScriptMacrosCalculator implements MacrosCalculator {
                 return ((Invocable) compiledScript.getEngine()).invokeMethod(
                         bindings, "main", compiledArguments.toArray()).toString();
             } catch (MacrosCompilationException | NoSuchMethodException | ScriptException e) {
-                final String message = String.format("Error during evaluation of %s macros: %s", macros.getName(),
+                final String message = "Error during evaluation of %s macros: %s".formatted(macros.getName(),
                         e.getMessage());
                 log.error(message, e);
                 return message;
@@ -96,25 +97,24 @@ public class ScriptMacrosCalculator implements MacrosCalculator {
     }
 
     private @Nonnull
-    CompiledScript compile(@Nonnull ScriptEngine engine, @Nonnull Macros macros)
-            throws MacrosCompilationException {
-        if (engine instanceof Compilable) {
+    CompiledScript compile(@Nonnull ScriptEngine engine, @Nonnull Macros macros) throws MacrosCompilationException {
+        if (engine instanceof Compilable compilable) {
             try {
                 String key = macros.getName();
                 if (compiledScripts.containsKey(key)) {
                     return compiledScripts.get(key);
                 }
-                CompiledScript compiledScript = ((Compilable) engine).compile(macros.getContent());
+                CompiledScript compiledScript = compilable.compile(macros.getContent());
                 compiledScripts.put(macros.getName(), compiledScript);
                 return compiledScript;
             } catch (ScriptException e) {
-                final String message = String.format("Error during compilation of %s macros: %s", macros.getName(),
+                final String message = "Error during compilation of %s macros: %s".formatted(macros.getName(),
                         e.getMessage());
                 log.error(message, e);
                 throw new MacrosCompilationException(message, e);
             }
         } else {
-            String message = String.format("Engine %s is not compilable", macros.getEngine());
+            String message = "Engine %s is not compilable".formatted(macros.getEngine());
             log.error(message);
             throw new MacrosCompilationException(message);
         }
@@ -133,7 +133,7 @@ public class ScriptMacrosCalculator implements MacrosCalculator {
         if (engine instanceof Invocable) {
             return compile(engine, macros);
         } else {
-            throw new MacrosCompilationException(String.format("Engine %s is not invocable", macros.getEngine()));
+            throw new MacrosCompilationException("Engine %s is not invocable".formatted(macros.getEngine()));
         }
     }
 }
